--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL='' # databse conection
-FLASK_SECRET_KEY=''
+DATABASE_URL='postgresql://img-gallery-db_owner:rCeoz7t8MAvg@ep-weathered-thunder-a16l4t7z.ap-southeast-1.aws.neon.tech/img-gallery-db?sslmode=require' # databse conection
+FLASK_SECRET_KEY='1c0cfafbc3b38275b41eaede7244b64755ab2dd0b60edc63'
